--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,13 +20,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   floating_bottom_navigation_bar: ^1.3.0
   settings_ui: ^0.4.0
+  flutter_typeahead: ^1.8.8
 
 dev_dependencies:
   flutter_test:
