--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,19 @@ dependencies:
   floating_bottom_navigation_bar: ^1.3.0
   settings_ui: ^0.4.0
   flutter_typeahead: ^1.8.8
+  simple_logger: ^1.7.0
+  json_serializable: ^3.2.5
+  dio: 3.0.9
+  retrofit: ^1.3.1+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.7.4
+  retrofit_generator: ^1.3.1+8
+
+dependency_overrides:
+  analyzer: '0.39.14'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
