--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   json_serializable: ^3.2.5
   dio: 3.0.9
   retrofit: ^1.3.1+1
+  bloc: ^6.0.0
+  flutter_bloc: ^6.0.0
+  equatable: ^1.2.5
 
 dev_dependencies:
   flutter_test:
