--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dev_dependencies:
 dependency_overrides:
   analyzer: '0.39.14'
 
+flutter_icons:
+  android: "ic_launcher"
+  ios: true
+#  image_path: "assets/icon/lbh_logo.png"
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
