--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,13 +25,14 @@ dependencies:
   settings_ui: ^0.4.0
   flutter_typeahead: ^1.8.8
   simple_logger: ^1.7.0
-  json_serializable: ^3.2.5
+  json_serializable: 3.5.0
   dio: 3.0.9
   retrofit: ^1.3.1+1
   bloc: ^6.0.0
   flutter_bloc: ^6.0.0
   equatable: ^1.2.5
   intl: ^0.16.0
+  enum_to_string: ^1.0.13
 
 dev_dependencies:
   flutter_test:
