--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   equatable: ^1.2.5
   intl: ^0.16.0
   enum_to_string: ^1.0.13
+  html: ^0.14.0+3
 
 dev_dependencies:
   flutter_test:
