--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,28 +21,25 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.3
-  floating_bottom_navigation_bar: ^1.3.0
+  floating_bottom_navigation_bar: ^1.4.1
   settings_ui: ^0.4.0
   flutter_typeahead: ^1.8.8
   simple_logger: ^1.7.0
-  json_serializable: 3.5.0
-  dio: 3.0.9
+  json_serializable: ^3.5.0
+  dio: ^3.0.10
   retrofit: ^1.3.1+1
   bloc: ^6.0.0
   flutter_bloc: ^6.0.0
   equatable: ^1.2.5
   intl: ^0.16.0
   enum_to_string: ^1.0.13
-  html: ^0.14.0+3
+  html: ^0.14.0+4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.7.4
   retrofit_generator: ^1.3.1+8
-
-dependency_overrides:
-  analyzer: '0.39.14'
 
 flutter_icons:
   android: "ic_launcher"
