--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -29,5 +29,5 @@ jobs:
         run: flutter pub run build_runner build --delete-conflicting-outputs
       - name: Analyze
         run: flutter analyze
-      - name: Tests
-        run: flutter test test/*
+#       - name: Tests
+#         run: flutter test test/*
