--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,6 @@
 name: national_train_hunter
 description: National Train Hunter
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+publish_to: 'none'
 version: 0.0.1
 
 environment:
@@ -20,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^1.1.0
   cupertino_icons: ^0.1.3
   floating_bottom_navigation_bar: ^1.4.1
   settings_ui: ^0.4.0
@@ -34,6 +24,8 @@ dependencies:
   intl: ^0.16.0
   enum_to_string: ^1.0.13
   html: ^0.14.0+4
+  shared_preferences: ^0.5.12+4
+  package_info: ^0.4.3
 
 dev_dependencies:
   flutter_test:
@@ -44,24 +36,9 @@ dev_dependencies:
 flutter_icons:
   android: "ic_launcher"
   ios: true
-#  image_path: "assets/icon/lbh_logo.png"
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
   fonts:
    - family: Ubuntu
      fonts:
